src/test/deca/syntax/valid/homemade/brackets_only.deca
// Description :
//      Empty program with only brackets
//
// Results :
//
// History :
//      created on 9/01/2020

{
}
