src/test/deca/syntax/invalid/homemade/include.deca
// Description :
//      Empty program
//
// Results :
//      CircularIncludeException
// History :
//      created on 9/01/2020

#include "included1.decah"

{
    println("this should not work");
}
